<resources>
    <string name="app_name">QuizApp</string>
    <string name="tv_splash">The Millionaire Quiz!</string>
    <string name="btn_start">Press Me To Start</string>
    <string name="tv_q1">What is the most common surname in the USA?</string>
    <string name="rb_q1_1">Smith</string>
    <string name="rb_q1_2">Johnson</string>
    <string name="rb_q1_3">Jones</string>
    <string name="rb_q1_4">Ali</string>
    <string name="tv_earned">You Earned: $</string>
    <string name="btn_confirm">Confirm</string>
    <string name="tv_q2">How long is an olympic swimming pool in meters?</string>
    <string name="rb_q2_1">100m</string>
    <string name="rb_q2_2">75m</string>
    <string name="rb_q2_3">50m</string>
    <string name="rb_q2_4">40m</string>
    <string name="tv_q3">Which country do cities of Perth, Adelade and Brisbane belong to?</string>
    <string name="rb_q3_1">England</string>
    <string name="rb_q3_2">Australia</string>
    <string name="rb_q3_3">Austria</string>
    <string name="rb_q3_4">Ireland</string>
    <string name="tv_q4">Which country invented ice cream?</string>
    <string name="rb_q4_1">China</string>
    <string name="rb_q4_2">France</string>
    <string name="rb_q4_3">Italy</string>
    <string name="rb_q4_4">Russia</string>
    <string name="tv_q5">Which member of the Beatles married Yoko Ono?</string>
    <string name="rb_q5_1">Paul McCartney</string>
    <string name="rb_q5_2">Ringo Starr</string>
    <string name="rb_q5_3">George Harrison</string>
    <string name="rb_q5_4">John Lennon</string>
    <string name="tv_q6">What is the loudest animal on Earth?</string>
    <string name="rb_q6_1">Eagle</string>
    <string name="rb_q6_2">Rhinoceros</string>
    <string name="rb_q6_3">Sperm Whale</string>
    <string name="rb_q6_4">Cricket</string>
    <string name="tv_q7">How many bones are in a human ear?</string>
    <string name="rb_q7_1">0</string>
    <string name="rb_q7_2">12</string>
    <string name="rb_q7_3">5</string>
    <string name="rb_q7_4">3</string>
    <string name="tv_finish">Quiz Completed!</string>
    <string name="tv_results">Results:</string>
    <string name="tv_money_earned">Money Earned: $</string>
    <string name="tv_right">Correct Answers:</string>
    <string name="tv_wrong">Incorrect Answers:</string>
    <string name="tv_thanks">Thank you for playing!</string>
</resources>